tests/snapshots/cli_regression__snapshot_generate_lef_ihp_sg13g2.snap
---
source: tests/cli_regression.rs
expression: lef_content
---
VERSION 5.8 ;
BUSBITCHARS "[]" ;
DIVIDERCHAR "/" ;

MACRO artwork
  CLASS BLOCK ;
  SITE core ;
  ORIGIN 0 0 ;
  SIZE 28.800 BY 28.800 ;
  SYMMETRY X Y ;
  OBS
    LAYER TopMetal2 ;
      RECT 7.200 21.600 14.400 28.800 ;
      RECT 21.600 21.600 28.800 28.800 ;
      RECT 0.000 14.400 7.200 21.600 ;
      RECT 14.400 14.400 21.600 21.600 ;
      RECT 7.200 7.200 14.400 14.400 ;
      RECT 21.600 7.200 28.800 14.400 ;
      RECT 0.000 0.000 7.200 7.200 ;
      RECT 14.400 0.000 21.600 7.200 ;
  END
END artwork

END LIBRARY
